FIX: Update base html so nav bar is here and then consistant one each page. Update index html and singup html to align with new base html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #0c0b0b;
-}
-
 header {
     background-color: #4CAF50;    
     padding: 10px;
@@ -90,13 +84,29 @@ h1 {
     font-size: 16px;
     min-width: 120px;
 }
+.nav-bar form {
+    display: inline;
+    margin: 0;
+    padding: 0;
+}
 
-button.nav-btn {
-    background-color: #007bff; /* Example color */
-    color: white;
-    border: none;
+.nav-bar button.nav-btn {
+    background: #c7f1c9;
+    color: #333;
+    border: 2px solid #333;
+    padding: 8px;
+    margin: 5px 0;
+    border-radius: 20px;
+    font-size: 16px;
+    min-width: 120px;
     cursor: pointer;
 }
+
+.nav-bar button.nav-btn:hover {
+    background: #333;
+    color: white;
+}
+
 
 button.nav-btn:hover {
     background-color: #0056b3;
@@ -107,12 +117,6 @@ button.nav-btn:hover {
     justify-content: center;
     align-items: center;
 }
-
-.nav-btn button {
-    width: 80%; 
-    padding: 12px; 
-    font-size: 16px; 
-  }
 
 .nav-btn i {
     margin-right: 5px;
@@ -162,17 +166,6 @@ button {
     color: white;
     cursor: pointer;
 }
-
-/* .navigation button {
-    background-color: #ff9800; /* Adjusted to match search button */
-    /*color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background 0.3s ease;
-} */
 
 button:hover {
     background: #0056b3;
